# Course_work_4

./: README.md  api_class.py  data.json  main.py  pyproject.toml  user_func.py  user_func_2.py  utils.py  vacancy.py  work_with_vacancy.py
